--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
        <header>
        <div class="img-wrapper">
-       <img src="Imagens/Bg.jpg" alt="">
+       <img src="Imagens/Bg.jpg" alt="Sala">
        </div>
        <div class="Banner">
        <h1>Web Developer & Front-End-Jr <br> Designer</h1>
@@ -32,7 +32,7 @@
        </div>
        </header>
 
-       <div class="sidebar">
+       <span class="sidebar">
        <nav>
        <ul class="menu">
        <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -49,7 +49,7 @@
        <a href="https://www.facebook.com/profile.php?id=100009083173426" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
        <a href="https://www.instagram.com/gut_embergh04/" target="_blank" title="instagram"><i class="fab fa-instagram"></i></a>
        </div>
-       </div>
+       </span>
        </div>
 
 
