--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        </div>
        </header>
 
-       <span class="sidebar">
+       <aside class="sidebar">
        <nav>
        <ul class="menu">
        <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -49,12 +49,83 @@
        <a href="https://www.facebook.com/profile.php?id=100009083173426" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
        <a href="https://www.instagram.com/gut_embergh04/" target="_blank" title="instagram"><i class="fab fa-instagram"></i></a>
        </div>
-       </span>
+       </aside>
+        
+       <section class="sessao-conhecimentos">
+       <div class="sessao-header">
+       <h1>Conhecimentos</h1>
+       </div>
+       <div class="conhecimentos">
+       <div class="conhecimento">
+       <div class="conhecimento-header">
+       <i class="fab fa-html5"></i>
+       <h3>HTML</h3>
+       </div>
+       <div class="conhecimento-text">
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus accusamus sint distinctio, illum veritatis veniam quis vero cumque ullam in quia, est neque temporibus deserunt pariatur labore soluta tenetur eum?</p>
+       </div>
        </div>
 
+       <div class="conhecimento">
+       <div class="conhecimento-header">
+       <i class="fab fa-css3-alt"></i>
+       <h3>CSS</h3>
+       </div>
+       <div class="conhecimento-text">
+       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt consectetur nostrum illo labore, obcaecati placeat debitis iure quam pariatur autem numquam nisi nam eaque eveniet eligendi, minus illum reprehenderit? Saepe.</p>
+       </div>
+       </div>
 
+       <div class="conhecimento">
+       <div class="conhecimento-header">
+       <i class="fas fa-pencil-alt"></i>
+       <h3>Design</h3>
+       </div>
+       <div class="conhecimento-text">
+       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex itaque illum ipsa rem minus voluptas, possimus odit ab maiores architecto pariatur hic placeat iure excepturi nostrum. Similique nulla reiciendis obcaecati!</p>
+       </div>
+       </div>
+
+       <div class="conhecimento">
+       <div class="conhecimento-header">
+       <i class="fab fa-js"></i>
+       <h3>javascript</h3>
+       </div>
+       <div class="conhecimento-text">
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam fuga odit quam et eligendi nulla, velit eius provident cupiditate tempore dolorem atque, a, ea voluptates similique! Laboriosam quidem obcaecati eum!</p>
+       </div>
+       </div>
+
+       <div class="conhecimento">
+       <div class="conhecimento-header">
+       <i class="fab fa-github"></i>
+       <h3>Git-GitHub</h3>
+       </div>
+       <div class="conhecimento-text">
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus iure quae recusandae pariatur quidem accusantium iste eos dignissimos sed, nesciunt labore cumque deserunt necessitatibus, ducimus a. Maxime, suscipit aut! Nisi?</p>
+       </div>
+       </div>
+
+       <div class="conhecimento">
+       <div class="conhecimento-header">
+       <i class="fas  fa-circle-info"></i>
+       <h3>Informática Básica</h3>
+       </div>
+       <div class="conhecimento-text">
+       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit saepe ipsa eveniet necessitatibus debitis perspiciatis id assumenda, recusandae mollitia dolorum cum ratione dicta ducimus blanditiis esse atque quod velit magni!</p>
+       </div>
+       </div>
+       <div class="conhecimento-img-wrapper">
+           <img src="Imagens/Conhecimento.png" alt="Imagen Conhecimento">
+       </div>
+       </div>
+
+       </section>
+       </div>
+
+    </body>
 <script src="portfólio.js"></script>
 
-</body>
+
 </html>
 <!--com o sinal de maior que > da para criar outra div e com o operador aritmético de javascript da para multiplicar essas divs com class-->
