--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
        <p>Gutembergh Vieira</p>
        <button>Saiba Mais</button>
        </div>
+    
        </header>
 
        <aside class="sidebar">
@@ -65,7 +66,6 @@
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus accusamus sint distinctio, illum veritatis veniam quis vero cumque ullam in quia, est neque temporibus deserunt pariatur labore soluta tenetur eum?</p>
        </div>
        </div>
-
        <div class="conhecimento">
        <div class="conhecimento-header">
        <i class="fab fa-css3-alt"></i>
@@ -75,7 +75,6 @@
        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt consectetur nostrum illo labore, obcaecati placeat debitis iure quam pariatur autem numquam nisi nam eaque eveniet eligendi, minus illum reprehenderit? Saepe.</p>
        </div>
        </div>
-
        <div class="conhecimento">
        <div class="conhecimento-header">
        <i class="fas fa-pencil-alt"></i>
@@ -85,7 +84,6 @@
        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex itaque illum ipsa rem minus voluptas, possimus odit ab maiores architecto pariatur hic placeat iure excepturi nostrum. Similique nulla reiciendis obcaecati!</p>
        </div>
        </div>
-
        <div class="conhecimento">
        <div class="conhecimento-header">
        <i class="fab fa-js"></i>
@@ -95,7 +93,6 @@
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam fuga odit quam et eligendi nulla, velit eius provident cupiditate tempore dolorem atque, a, ea voluptates similique! Laboriosam quidem obcaecati eum!</p>
        </div>
        </div>
-
        <div class="conhecimento">
        <div class="conhecimento-header">
        <i class="fab fa-github"></i>
@@ -105,14 +102,13 @@
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus iure quae recusandae pariatur quidem accusantium iste eos dignissimos sed, nesciunt labore cumque deserunt necessitatibus, ducimus a. Maxime, suscipit aut! Nisi?</p>
        </div>
        </div>
-
        <div class="conhecimento">
        <div class="conhecimento-header">
        <i class="fas  fa-circle-info"></i>
-       <h3>Informática Básica</h3>
+       <h3>Informática </h3>
        </div>
        <div class="conhecimento-text">
-       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit saepe ipsa eveniet necessitatibus debitis perspiciatis id assumenda, recusandae mollitia dolorum cum ratione dicta ducimus blanditiis esse atque quod velit magni!</p>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore dignissimos amet cumque omnis excepturi minus accusamus dolores, quo animi, accusantium hic voluptate. Iste, ut temporibus voluptas tenetur recusandae odit ipsa?</p>
        </div>
        </div>
        <div class="conhecimento-img-wrapper">
@@ -121,7 +117,48 @@
        </div>
 
        </section>
+       <section class="seesao-projetos">
+       <div class="sessao-header">
+       <h1>Projetos</h1>
        </div>
+       <div class="projetos">
+       <div class="card">
+       <div class="card-img-wrapper">
+       <img src="Imagens/Projeto-A.png" alt="Projeto-A">
+       </div>
+       <div class="card-info">
+       <h2>Project Card</h2>
+       <h3>Javascript</h3>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, fuga enim. Iure eum nam omnis quae odio, dolorum modi inventore, soluta facere, iusto debitis doloribus itaque eveniet ipsa accusantium eos.</p>
+       <button>Saiba Mais</button>
+       </div>
+       </div>
+       <div class="card">
+       <div class="card-img-wrapper">       
+       <img src="Imagens/Projeto-B.jpg" alt="Imagen do projeto-B">
+       </div>
+       <div class="card-info">
+       <h2>Project Maré</h2>
+       <h3>Html, Css</h3>
+       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis corrupti incidunt praesentium. Suscipit facilis eum nisi ex. Perspiciatis provident eaque blanditiis in assumenda amet, dignissimos ex similique, necessitatibus iste itaque.</p>
+       <button>Saiba mais</button>
+       </div>
+    </div>
+    <div class="card">
+     <div class="card-img-wrapper">
+     <img src="Imagens/Projeto-C.jpg" alt="Imagem-Progect-C">
+     </div>
+     <div class="card-info">
+     <h2>Projeto Belo</h2>
+     <h3>HTML</h3>
+     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, rerum. Quae doloremque fugit ipsa! Quo velit vel eveniet eius, iusto tempore laudantium harum fugiat error repellendus nisi debitis saepe qui!</p>
+     <button>Saiba Mais</button>
+     </div>
+    </div>
+     </div>
+     </div>
+     </section>
+     </div>
 
     </body>
 <script src="portfólio.js"></script>
