--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
        <div class="conhecimento">
        <div class="conhecimento-header">
        <i class="fas  fa-circle-info"></i>
-       <h3>Informática </h3>
+       <h3>card-info </h3>
        </div>
        <div class="conhecimento-text">
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore dignissimos amet cumque omnis excepturi minus accusamus dolores, quo animi, accusantium hic voluptate. Iste, ut temporibus voluptas tenetur recusandae odit ipsa?</p>
